--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "military-service-company-checker-front",
+  "name": "table-time-manager",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
